--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,29 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
-version: 2.1
-
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
-jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
-    docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+version: 2
+jobs: 
+  one: 
+    docker: 
+      - image: cimg/ruby:2.6.8 
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD 
+    steps:
+      - checkout 
+      - run: echo "A first hello" 
+      - run: sleep 25 
+  two: 
+    docker: 
+      - image: cimg/ruby:3.0.2
+        auth:
+          username: mydockerhub-user
+          password: $DOCKERHUB_PASSWORD  
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
-
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+      - run: echo "A more familiar hi" 
+      - run: sleep 15 
 workflows:
-  say-hello-workflow:
-    jobs:
-      - say-hello
+  version: 2
+  one_and_two: 
+    jobs: 
+      - one
+      - two
+
